<resources>
    <string name="app_name">WMS</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="large_text">
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="huozhu">货主：</string>
    <string name="fahuotongzhi">发货通知：</string>
    <string name="tuopanhao">托盘号：</string>
    <string name="xiajiacunwei">下架储位：</string>
    <string name="shangjiacunwei">上架储位：</string>
    <string name="shuliang">数量：</string>
    <string name="chuwei">储位：</string>
    <string name="pinming">品名：</string>
    <string name="jianyituopan">建议托盘：</string>
    <string name="pici">批次：</string>
    <string name="danwei">单位：</string>
    <string name="条码">条码：</string>

    <string name="beizhu">备注：</string>
    <string name="baocun">保存</string>
    <string name="shouhuotongzhi">收货通知：</string>
    <string name="tihi">TiHi：</string>
    <string name="shouhuoshuliang">收货数量：</string>
    <string name="shengchanriqi">生产日期：</string>
    <string name="shouhuowendu">收货温度：</string>
    <string name="kucunleixing">条码：</string>
    <string name="yuqishuliang">预期数量：</string>
    <string name="yishoushuliang">已收数量：</string>
    <string name="chang">长：</string>
    <string name="kuang">宽：</string>
    <string name="gao">高：</string>
    <string name="tiji">体积：</string>
    <string name="zhongliang">重量：</string>
    <string name="dancengshuliang">单层数量：</string>
    <string name="cenggao">层高：</string>
    <string name="baozhiqi">保质期：</string>
    <string name="shangpinbianma">商品编码：</string>
    <string name="kehubianma">客户编码：</string>
    <string name="pandianchuwei">盘点储位：</string>
    <string name="shijishuliang">实际数量：</string>
    <string name="yichutuopan">移出托盘：</string>
    <string name="yichuchuwei">移出储位：</string>
    <string name="yirutuopan">移入托盘：</string>
    <string name="yiruchuwei">移入储位：</string>
    <string name="shuliang1">数量1：</string>
    <string name="shuliang2">数量2：</string>
    <string name="yuanchuwei">源储位：</string>
    <string name="mubiaochuwei">目标储位：</string>
    <string name="tiaoma">条码：</string>
    <string name="tuopan">托盘：</string>
    <string name="kehu">客户：</string>
    <string name="sousuo">搜索</string>

    <string name="sy_dialog_default_title">这里是标题</string>
    <string name="sy_dialog_ok">确定</string>
    <string name="sy_dialog_cancel">取消</string>
    <string name="querenriqi">确认日期：</string>
    <string name="fuheshuliang">复核数量：</string>
    <string name="search1">请扫描单号或储位</string>
    <string name="searchgoods">请扫描商品编码</string>
    <string name="search2">请扫描商品条码</string>
    <string name="search3">请扫描储位</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="jiaojiedan">交接单</string>
    <string name="fangweima">防伪码</string>
    <string name="wuliaohao">物料号</string>
    <string name="jiaojieshuliang">交接数</string>
    <string name="daishangjiashuliang">待上架</string>
    <string name="heji">合计</string>

    <string name="wuliaohaos">物料号：</string>
    <string name="shangjiachuweis">上架储位：</string>
    <string name="shuliangs">数量：</string>
    <string name="zhanyongchuwei">占用储位：</string>

</resources>
