<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ItemPickCardViewStyle"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp"
    >

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/huozhu" />

            <TextView
                android:id="@+id/tv_zhongWenQch"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/pinming" />

            <TextView
                android:id="@+id/tv_pinming"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/tiaoma" />

            <EditText
                android:id="@+id/tv_tiaoma"
                style="@style/ItemPickdetailRightEnableStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/chang" />

            <EditText
                android:id="@+id/tv_chang"
                style="@style/ItemPickdetailRightEnableStyle"

                />
        </LinearLayout>

        <LinearLayout
            style="@style/ItemPickdetailStyle"
            android:visibility="gone">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/xiajiacunwei" />

            <TextView style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/kuang" />

            <EditText
                android:id="@+id/tv_kuang"
                style="@style/ItemPickdetailRightEnableStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/gao" />

            <EditText
                android:id="@+id/tv_gao"
                style="@style/ItemPickdetailRightEnableStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/tiji" />

            <EditText
                android:id="@+id/tv_tiji"
                style="@style/ItemPickdetailRightEnableStyle"

                />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/zhongliang" />

            <EditText
                android:id="@+id/tv_zhongliang"
                style="@style/ItemPickdetailRightEnableStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/dancengshuliang" />

            <EditText
                android:id="@+id/tv_dancengshuliang"
                style="@style/ItemPickdetailRightEnableStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/cenggao" />

            <EditText
                android:id="@+id/tv_cenggao"
                style="@style/ItemPickdetailRightEnableStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/baozhiqi" />

            <EditText
                android:id="@+id/tv_baozhiqi"
                style="@style/ItemPickdetailRightEnableStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle"  android:visibility="gone">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/shangpinbianma" />

            <TextView
                android:id="@+id/tv_shangpinbianma"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>
        <LinearLayout style="@style/ItemPickdetailStyle"  android:visibility="gone">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/kehubianma" />

            <TextView
                android:id="@+id/tv_kehubianma"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/danwei" />

            <TextView
                android:id="@+id/tv_danwei"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_save"
            style="@style/ItemPickSaveBtnStyle" />

    </com.zhy.android.percent.support.PercentLinearLayout>
</android.support.v7.widget.CardView>
