<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ItemPickCardViewStyle"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp"
    >

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/huozhu" />

            <TextView
                android:id="@+id/tv_zhongWenQch"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/tuopanhao" />

            <TextView
                android:id="@+id/tv_tuopanhao"
                style="@style/ItemPickdetailRightDisableStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/pandianchuwei" />

            <EditText
                android:id="@+id/tv_pandianchuwei"
                style="@style/ItemPickdetailRightEnableStyle"

                />
        </LinearLayout>

        <LinearLayout
            style="@style/ItemPickdetailStyle"
            android:visibility="gone">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/xiajiacunwei" />

            <EditText style="@style/ItemPickdetailRightEnableStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/shijishuliang" />

            <EditText
                android:id="@+id/tv_shijishuliang"
                style="@style/ItemPickdetailRightEnableStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/chuwei" />

            <TextView
                android:id="@+id/tv_chuwei"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/pinming" />

            <TextView
                android:id="@+id/tv_pinming"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/shengchanriqi" />

            <TextView
                android:id="@+id/tv_shengchanriqi"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>



        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/danwei" />

            <TextView
                android:id="@+id/tv_shlDanWei"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            style="@style/ItemPickSaveBtnStyle" />

    </com.zhy.android.percent.support.PercentLinearLayout>
</android.support.v7.widget.CardView>
