<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/ItemPickCardViewStyle"
    app:cardCornerRadius="10dp"
    app:cardElevation="6dp"
    >

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        >

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/huozhu" />

            <TextView
                android:id="@+id/tv_zhongWenQch"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/fahuotongzhi" />

            <TextView
                android:id="@+id/tv_omNoticeId"
                style="@style/ItemPickdetailRightDisableStyle" />
        </LinearLayout>
        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/xiajiacunwei"
                />

            <EditText
                android:id="@+id/tv_binId2"
                style="@style/ItemPickdetailRightEnableStyle"/>
            <!--android:inputType="number"-->
            <!--android:digits="1234567890-/"-->
            />
        </LinearLayout>
        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/tuopanhao"
                />

            <EditText
                android:id="@+id/tv_tinId2"
                style="@style/ItemPickdetailRightEnableStyle"/>
                <!--android:inputType="number"-->
                <!--android:digits="1234567890-/"-->
                />
        </LinearLayout>

        <LinearLayout
            style="@style/ItemPickdetailStyle"
            android:visibility="gone">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/xiajiacunwei" />

            <TextView style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/shuliang" />

            <TextView
                android:id="@+id/tv_baseGoodscount"
                style="@style/ItemPickdetailRightDisableStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/chuwei" />

            <TextView
                android:id="@+id/tv_binId"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/pinming" />

            <TextView
                android:id="@+id/tv_shpMingCheng"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/jianyituopan" />

            <TextView
                android:id="@+id/tv_tinId"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/pici" />

            <TextView
                android:id="@+id/tv_goodsProData"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/danwei" />

            <TextView
                android:id="@+id/tv_shlDanWei"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <LinearLayout style="@style/ItemPickdetailStyle">

            <TextView
                style="@style/ItemPickdetailLeftStyle"
                android:text="@string/beizhu" />

            <TextView
                android:id="@+id/tv_omBeiZhu"
                style="@style/ItemPickdetailRightStyle" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            style="@style/ItemPickSaveBtnStyle" />

    </com.zhy.android.percent.support.PercentLinearLayout>
</android.support.v7.widget.CardView>
